# es-journals

./: .env.tpl  .gitignore  .makim.yaml  .pre-commit-config.yaml  .sugar.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  env.tpl  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/ci/: healthcheck.sh
.github/workflows/: main.yaml  release.yaml
ci/: healthcheck.sh
conda/: base.yaml  dev.yaml
containers/: Dockerfile  compose.elasticsearch.dev.yaml  compose.elasticsearch.staging.yaml  compose.elasticsearch.yaml  compose.nginx.yaml  compose.yaml  dockerfile.certbot  dockerfile.nginx  download-data.R  entrypoint.sh
containers/init-scripts/: set_passwords.sh
containers/nginx/scripts/: create_symlinks.sh  entrypoint.sh  generate_proxy_ui.py
containers/nginx/templates/: nginx.template.conf
data/rxivx/biorxiv/backup/: README.md
data/rxivx/biorxiv/downloaded/: biorxiv_1900-01-01_1900-12-31.json  biorxiv_2013-01-01_2013-11-07.json
data/rxivx/biorxiv/final/: biorxiv_full_data.json
docs/: contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
docs/notebooks/: Test_Elasticsearch_4_BiorXiv_2024_JSON.ipynb
scripts/: copy-certificates-to-es.sh  cronjobs  elasticrxivx.py  es_index_doc_counter.py  fetch_rxivx_data.sh  generate-certificates.sh  index_arxiv_to_es.py  merge_arxiv_data.py  run_elasticrxivx.sh  run_index_arxiv_to_es.sh
src/: fetch_rxivx_data.sh  merge_arxiv_data.py
tests/: test_connection.py
(+5 files in other folders)
