[project]
name = "es-journals"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Ogasawara",email = "ivan.ogasawara@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
ruff = "^0.9.7"
mypy = "^1.15.0"
pytest = "^8.3.4"
